--- a/app/views/appointments/edit_dialog.js.erb
+++ b/app/views/appointments/edit_dialog.js.erb
@@ -14,5 +14,6 @@ function clr()
     $('#phone').val("");
     $('#birth_date').val("");
     $('#address').val("");
+    $('#comment').val("");
   }
 }
