--- a/app/views/shared/_customer_additional_fields.html.erb
+++ b/app/views/shared/_customer_additional_fields.html.erb
@@ -12,3 +12,5 @@
 <%= f.date_field :birth_date, id: 'birth_date', class: "form-control"  %>
 <%= f.label :address, "Адрес:" %>
 <%= f.text_area :address, id: 'address', class: "form-control"  %>
+<%= f.label :comment, "Сведения:" %>
+<%= f.text_area :comment, id: 'comment', class: "form-control"  %>
