--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
           <% if is_admin? %>
             <li><%= link_to "Расписание", timetables_editweek_path %></li>
             <li><%= link_to "Пациенты", customers_path %></li>
+              <li><%= link_to "Мед. центры", places_path %></li>
           <% end %>
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
