--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -33,7 +33,7 @@
 
     <tbody>
       <% date_range.each_slice(7) do |week| %>
-          <tr>
+          <tr style="background-color: transparent">
           <% week.each do |day| %>
             <%= content_tag :td, class: calendar.td_classes_for(day) do %>
               <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
