--- a/app/views/timetables/editweek.html.erb
+++ b/app/views/timetables/editweek.html.erb
@@ -27,7 +27,7 @@
 </script>
 
 <script type="application/javascript"  data-turbolinks-eval="false">
-  $( document ).on('turbolinks:load', function() {
+  $( document ).on('turbolinks:render', function() {
     //console.info(initialized);
     //console.info(gridTable);
     if (!initialized) {
