--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -26,7 +26,7 @@
   });
 </script>
 <script type="application/javascript"  data-turbolinks-eval="false">
-  $( document ).on('turbolinks:load', function() {
+  $( document ).on('turbolinks:render', function() {
     if (!initialized) {
       init();
       initialized = true;
